# Kette

./: README.md
vm/: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  build.py
vm/include/kette/: artifacts.hpp  builtins.hpp  bytecode.hpp  cfgs.hpp  context.hpp  defaults.hpp  mem.hpp  objects.hpp  reader.h  reader.hpp  stacks.h  symbols.hpp  testing.h  types.h  types.hpp
vm/include/kette/arch/: x64.hpp
vm/src/: builtin.rs  builtins.cpp  bytecode.cpp  cfg.rs  cfgs.cpp  context.cpp  context.rs  jit.rs  lexer.rs  lib.rs  main.cpp  main.rs  mem.cpp  memory.rs  objects.cpp  sources.rs  stacks.cpp  symbol.rs  trees.rs
vm/src/architecture/: x64.rs
vm/src/architecture/x64/: instruction.rs  opcode.rs
vm/src/compiler/: artifacts.cpp
vm/src/jit/: compiler.rs  memory.rs
vm/src/lol/: test.cpp
vm/src/reader/: reader.cpp  symbols.cpp
vm/src/trees/: cfg.rs  lower.rs
