[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation"] }