[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
bitflags = "2.0.0-rc.1"
lazy_static = "1.4.0"
ahash = "0.8.2"
color-eyre = "0.6.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"] }